--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,4 +27,4 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: start
-        run: ./1_build.sh
+        run: ./1_build.sh husky
