--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Set up variables
       run: |
         echo "AVBROOT_VERSION=3.4.0" >> $GITHUB_ENV
-        echo "ROM_TARGET=husky
+        echo "ROM_TARGET=husky" >> $GITHUB_ENV
 
     - name: Validate input
       run: |
