--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -123,6 +123,12 @@ jobs:
 
     - name: Build ROM
       run: |
+        function repo_sync_until_success() {
+          until repo sync --force-sync; do
+            echo "repo sync failed, retrying..."
+            sleep 5
+          done
+        }
         mkdir -p rom/
         pushd rom/
         repo init -u https://github.com/GrapheneOS/platform_manifest.git -b "refs/tags/${GRAPHENE_RELEASE}" --depth=1 --git-lfs
@@ -151,4 +157,10 @@ jobs:
         expect ../../../expect/passphrase-prompts.exp ../../external/avb/avbtool.py extract_public_key --key avb.pem --output avb_pkmd.bin
         ssh-keygen -t ed25519 -f id_ed25519 -N ""
         popd
-        expect ../expect/passphrase-prompts.exp ./script
+        expect ../expect/passphrase-prompts.exp ./script/encrypt_keys.sh ./keys/husky
+        m otatools-package
+        expect ../expect/passphrase-prompts.exp script/release.sh husky
+        popd
+
+    - name: Output results
+      run: ls rom/out/release-*/*ota_update*.zip
